--- a/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei_Ciulpan_872394.tex
+++ b/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei_Ciulpan_872394.tex
@@ -36,15 +36,13 @@
 \usepackage{listings}
 \usepackage{enumerate}
 
+\renewcommand{\UrlFont}{\footnotesize}
 
 \newcolumntype{L}{>{\raggedright\arraybackslash}X}
-
 
 \addto{\captionsitalian}{%
 	\renewcommand{\bibname}{Sitografia}
 }
-
-
 
 \lstset{
 	extendedchars=true,
@@ -83,7 +81,7 @@
 \dept{Corso di Laurea in Informatica} 
 \anno{2018/2019}
 \matricola{872394}
-\relatore{Dott. Andrea TRENTINI}
+\relatore{Andrea TRENTINI}
 \correlatore{Marco LANZA}
 \afterpage{\blankpage}
 % 
@@ -101,10 +99,6 @@
        
 
 \afterpreface
-
-\marginpar{atrent: da qualche parte descrivi anche il contesto in cui hai lavorato, serve per capire che le richieste funzionali che ti sono state fatte erano adeguate}
-
-\marginpar{ac: in che senso? di cosa dovrei parlare e dove potrei mettere quella sezione?}
 
 %			CAPITOLO 1: Intro
 \chapter{Introduzione}\label{cap:introduzione}
@@ -867,7 +861,7 @@ Node.js è un framework open-source che esegue codice JavaScript al di fuori da 
 	\item utilizza lo stesso linguaggio di programmazione degli sviluppatori front-end, perciò è ancora piu' semplice diventare un full-stack developer grazie al fatto di non dover perforza conoscere linguaggi come Ruby o PHP.
 \end{itemize}
 
-L'applicazione utilizza vari moduli di Node.js (Figura \ref{fig:node_modules}):
+L'applicazione utilizza vari moduli di Node.js:
 
 \begin{itemize}
 	\item Path (\url{https://nodejs.org/docs/latest/api/path.html}) fornisce alcune utilità nel lavorare con i file e con i percorsi delle directory. L'applicazione usa il modulo per definire una directory statica assoluta per i file dell'applicazione senza dover quindi utilizzare l'intero indirizzo della directory "public": 
@@ -913,11 +907,12 @@ var server = app.listen(port, () => {
 	\end{itemize}
 	\item Body-Parser (\url{https://www.npmjs.com/package/body-parser}) ispeziona i contenuti delle richieste HTTP. Utile per poter leggere i dati in formato JSON (e non solo). 
 \begin{lstlisting}
-app.use(bodyParser.json()); // for parsing json
-app.use(bodyParser.urlencoded( { extended: true } )); // for parsing url encoded data
-app.use(bodyParser.text()); // for parsing raw text (data from arduino)
+// for parsing
+app.use(bodyParser.json()); 
+app.use(bodyParser.urlencoded( { extended: true } )); 
+app.use(bodyParser.text()); 
 \end{lstlisting}
-	\item EJS (\url{https://ejs.co/}) è un linguaggio di templating che permette di generare codice JavaScript all'interno di pagine HTML. Il codice nel lato server è molto semplice: 
+	\item EJS (\url{https://ejs.co/}) è un linguaggio di templating che permette di avere dati provenienti dal server direttamente all'interno di documenti HTML. Il codice nel lato server è molto semplice: 
 \begin{lstlisting}
 app.set('view engine', 'ejs');
 \end{lstlisting}
@@ -1196,18 +1191,38 @@ Le API sono state testate con Postman (\url{https://www.getpostman.com/}), un so
 
 %
 \section{Front-End}
+%
 
-In ingegneria del software, il termine front-end rappresenta l'interfaccia dell'applicazione, ovvero la parte visibile agli utenti e quella con cui essi interagiscono. Per creare il front-end vengono utilizzati linguaggi come HTML (per la struttura e contenuto), CSS (per lo stile) e JavaScript per aggiungere dinamicità al sito (pulsanti, chiamate AJAX ecc.).
+In ingegneria del software, il termine front-end rappresenta l'interfaccia dell'applicazione, ovvero la parte visibile agli utenti e quella con cui essi interagiscono.
 
+%
 \subsection{Scelte progettuali}
-Le basi: Javascript, HTML5 \& CSS
-\\
-w3.css
-\\
+%
+
+Per creare il front-end vengono utilizzati linguaggi come HTML (per la struttura e contenuto), CSS (per lo stile) e client-side JavaScript per aggiungere dinamicità al sito (pulsanti, chiamate AJAX ecc.).
+
+%
+\subsubsection*{HTML5}
+%
+\textbf{H}yper \textbf{T}ext \textbf{M}arkup \textbf{L}anguage è il linguaggio di markup standard nato all'inizio degli anni novanta per la formattazione e impaginazione di documenti progettati per essere visualizzati in un browser. E' stato sviluppato assieme al protocollo HTTP dedicato al trasferimento di documenti di tale formato. Viene spesso utilizzato insieme ad un linguaggio di stile (CSS) e uno di scripting (JavaScript). L'ultima versione standardizzata dal W3C è HTML 5.1.
+I file HTML generati nel progetto hanno l'estensione EJS perchè vengono usati assieme al linguaggio di templating per portare i dati provenienti dal server direttamente nel documento stesso.
+%
+\subsubsection*{CSS}
+%
+I documenti HTML sono stilizzati con il linguaggio di stile più diffuso al mondo chiamato CSS (\textbf{C}ascading \textbf{S}tyle \textbf{S}heets): esso descrive, attraverso delle regole, i modi in cui gli elementi di un documento devono essere presentati nell'interfaccia grafica. Le regole possono essere scritte direttamente nel file HTML, ma ciò crea solo confusione ed è generalmente buona norma avere i file CSS separati e importarli nel documento, così come segue:
+\begin{lstlisting}
+<link rel="stylesheet" href="/css/w3.css">
+<link rel="stylesheet" href="/css/custom.css">
+<link rel="stylesheet" href="/css/font-awesome.min.css">
+\end{lstlisting}
+Normalmente le persone non scrivono le proprie regole (è un lavoro molto lungo e per fare una cosa bella serve tanta esperienza in web design) ma trovano dei template (esistono sia gratis che a pagamento) da utilizzare. In questo caso è stato utilizzato un template (\url{https://www.w3schools.com/w3css/tryw3css_templates_dark_portfolio.htm}) di W3.CSS (\url{https://www.w3schools.com/w3css/default.asp}) scelto dal tutor aziendale. Inoltre è stato utilizzato \emph{Font Awesome}, un toolkit di icone distribuito sotto licenze libere (CC e MIT).
+%
+\subsubsection*{JavaScript}
+%
 jQuery
-\\
-EJS
-\\
+AJAX
+DOM
+
 %
 % 
 %			CAPITOLO 4: Analisi del progetto
