--- a/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei_Ciulpan_872394.tex
+++ b/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei_Ciulpan_872394.tex
@@ -947,6 +947,7 @@ Esempio di utilizzo nel lato client (il codice JavaScript all'interno della pagi
 	\label{fig:mvc}
 \end{figure}
 
+Per garantire l'indipendenza tra i dati e l'interfaccia, si può modularizzare il codice: il sistema viene diviso in moduli, in modo che esso risulti più semplice da comprendere e da manipolare. La modularizzazione è necessaria soprattutto quando aumenta la complessità di un progetto (che deve essere scalabile) poichè garantisce che ogni parte sia modificabile, estendibile e riutilizzabile.
 Il sito web è stato creato sulla base di MVC (Model-View-Controller), un pattern architetturale (Figura \ref{fig:mvc}) che separa un'applicazione in tre principali componenti logici: il modello, la vista e il controller. Ognuno di questi componenti è progettato per gestire diversi aspetti specifici dello sviluppo di un'applicazione:
 
 \begin{itemize}
@@ -1016,7 +1017,7 @@ exports.fullTableSearch = (req, res) => {
 
 \subsection{Database}\label{sec:db}
 %
-Il DBMS (\textbf{D}ata\textbf{B}ase \textbf{M}anagement \textbf{S}ystem) scelto per l'applicazione si chiama MongoDB (\url{https://www.mongodb.com/}). MongoDB è un DBMS non relazionale (classificato come un database di tipo NoSQL) ed è orientato ai documenti: al posto delle tipiche tabelle dei database relazionali vengono utilizzati dei documenti in formato JSON, facilitando quindi l'integrazione dei dati con quasi tutte le applicazioni web (infatti JSON è il formato di dati più utilizzato per lo scambio dei dati in rete).
+Il DBMS (\textbf{D}ata\textbf{B}ase \textbf{M}anagement \textbf{S}ystem) scelto per l'applicazione si chiama MongoDB (\url{https://www.mongodb.com/}). MongoDB è un DBMS open source e non relazionale (classificato come un database di tipo NoSQL) ed è orientato ai documenti: al posto delle tipiche tabelle dei database relazionali vengono utilizzati dei documenti in formato JSON, facilitando quindi l'integrazione dei dati con quasi tutte le applicazioni web (infatti JSON è il formato di dati più utilizzato per lo scambio dei dati in rete).
 MongoDB si integra facilmente con Node.js grazie a dei driver creati dagli sviluppatori stessi (\url{https://mongodb.github.io/node-mongodb-native/3.2/}). Questi driver, purtroppo, non portano tanta astrazione e sollevano dei problemi per chi non è abituato a un database NoSQL: 
 \begin{itemize}
 	\item la logica dei dati è diversa rispetto a quella che viene insegnata nei corsi tradizionali di basi di dati perciò potrebbe essere difficile abituarsi (ma, come si vedrà, anche non necessario);
@@ -1105,7 +1106,7 @@ exports.addLog = (req, res) => {
 	} else { ... } // log senza tessera
 }
 \end{lstlisting}
-\item Il log è visualizzabile sul sito accedendo all'endpoint \emph{/api/logs/view} (il risultato si può vedere nella Figura \ref{fig:logbook})$.$ Il codice eseguito dopo una richiesta GET all'endpoint specificato:
+\item Il log è visualizzabile sul sito accedendo all'endpoint \emph{/api/logs/view} (il risultato si può vedere nella Figura \ref{fig:logbook})$.$ Esempio del codice eseguito dopo una richiesta GET all'endpoint specificato:
 \begin{lstlisting}
 exports.viewAllLogs = (req, res) => {
 	Log.find( (err, logs) => {
@@ -1216,19 +1217,59 @@ I file HTML generati nel progetto hanno l'estensione EJS perchè vengono usati a
 %
 \subsubsection*{CSS}
 %
-I documenti HTML sono stilizzati con il linguaggio di stile più diffuso al mondo chiamato CSS (\textbf{C}ascading \textbf{S}tyle \textbf{S}heets): esso descrive, attraverso delle regole, i modi in cui gli elementi di un documento devono essere presentati nell'interfaccia grafica. Le regole possono essere scritte direttamente nel file HTML, ma ciò crea solo confusione ed è generalmente buona norma avere i file CSS separati e importarli nel documento, così come segue:
+I documenti HTML sono stilizzati con il linguaggio di stile più diffuso al mondo chiamato CSS (\textbf{C}ascading \textbf{S}tyle \textbf{S}heets): esso descrive, attraverso delle regole, i modi in cui gli elementi di un documento devono essere presentati e animati nell'interfaccia grafica. Le regole possono essere scritte direttamente nel file HTML, ma ciò crea solo confusione ed è generalmente buona norma avere i file CSS separati e poi importati nel documento, così come segue:
 \begin{lstlisting}
 <link rel="stylesheet" href="/css/w3.css">
 <link rel="stylesheet" href="/css/custom.css">
 <link rel="stylesheet" href="/css/font-awesome.min.css">
 \end{lstlisting}
-Normalmente gli sviluppatori non scrivono le proprie regole (è un lavoro molto lungo e per fare una cosa bella serve tanta esperienza in web design) ma trovano dei template (esistono sia gratis che a pagamento) da utilizzare. In questo caso è stato utilizzato un template (\url{https://www.w3schools.com/w3css/tryw3css_templates_dark_portfolio.htm}) di W3.CSS (\url{https://www.w3schools.com/w3css/default.asp}) scelto dal tutor aziendale. Inoltre è stato utilizzato \emph{Font Awesome}, un toolkit di icone distribuito sotto licenze libere (CC e MIT).
+Normalmente gli sviluppatori non scrivono le proprie regole (è un lavoro molto lungo e per fare una cosa bella serve tanta esperienza in web design) ma trovano dei template (esistono sia gratis che a pagamento) da utilizzare. In questo caso è stato utilizzato un template (\url{https://www.w3schools.com/w3css/tryw3css_templates_dark_portfolio.htm}) di W3.CSS (\url{https://www.w3schools.com/w3css/default.asp}) scelto dal tutor aziendale. W3.CSS è un framework moderno, semplice, veloce e gratis che supporta un design mobile-first che aiuta lo sviluppatore a creare siti web moderni e responsivi. Il vantaggio di un sito responsivo è il fatto che è stato progettato per rispondere automaticamente a tutti i tipi di dispositivi utilizzati per visualizzarlo (e.g. desktop, mobile, tablet). Questo approccio viene implementato sfruttando le caratteristiche delle \emph{media queries}:
+\begin{lstlisting}
+@media (max-width:768px)
+{
+	.red-circle
+	{
+		width: 25px!important;
+		height: 25px!important;
+	}
+	
+	.green-circle
+	{
+		width: 25px!important;
+		height: 25px!important;
+	}
+}
+\end{lstlisting}
+Inoltre è stato utilizzato \emph{Font Awesome}, un toolkit di icone distribuito sotto licenze libere (CC BY 4.0 e MIT).
 %
 \subsubsection*{JavaScript}
 %
-jQuery
-AJAX
-DOM
+JavaScript è un linguaggio di programmazione introdotto nel 1995 con lo scopo di aggiungere programmi all'interno di siti web sul browser Netscape Navigator. Il linguaggio è stato adottato da quasi tutti gli altri browser esistenti (è stato anche standardizzato sotto il nome di ECMAScript) e ha reso possibile avere applicazioni web moderne con cui un utente può interagire direttamente senza dover ricaricare la pagina\cite{eloquent_javascript}. E' un linguaggio molto evoluto e studiato nel tempo e ora si definisce come un linguaggio di scripting client-side (ma non solo, come si è visto con Node.js) eseguito dai browser. Il codice JavaScript può essere scritto all'interno di qualsiasi documento, ma è buona norma avere i file con estensione .js separati e poi inclusi alla fine del documento (per far sì che tutti gli elementi vengano caricati dal browser), così come segue: 
+\begin{lstlisting}
+<script type="text/javascript" src=/js/jquery-3.3.1.min.js></script>
+<script type="text/javascript" src=/js/forms.js></script>
+<script type="text/javascript" src=/js/buttons.js></script>
+<script type="text/javascript" src=/js/dettagliSoci.js></script>
+\end{lstlisting}
+JavaScript è un linguaggio che utilizza un singolo thread (organizza l'esecuzione in un'unica pila chiamata \emph{call stack}) e segue il paradigma della programmazione a eventi, perciò è possibile costruire un comportamento non bloccante. Il motore JavaScript crea una coda di eventi (che possono essere operazioni di I/O, richieste di rete, chiamate di WebWorker, funzioni inserite in timer ecc.) che, al verificarsi di un evento, possono modificare l'ordine di esecuzione sequenziale del codice. Si prenda come esempio una funzione che scrive "Hello World" ogni 3 secondi: 
+\begin{lstlisting}
+function myFunction() {
+	setInterval(function() { 
+		alert("Hello World"); 
+	}, 3000);
+}
+\end{lstlisting}
+JavaScript interagisce col browser attraverso il DOM (\textbf{D}ocument \textbf{O}bject \textbf{M}odel) della pagina HTML. Il DOM è stato standardizzato dalla W3C e viene creato dal browser dopo che una pagina è stata caricata. Esso segue un modello gerarchico di oggetti (Figura \ref{fig:dom}) che possono essere manipolati dagli script dando la possibilità di aggiornare dinamicamente il contenuto, la struttura e lo stile dei documenti. Grazie al DOM è possibile accedere agli elementi (e loro proprietà, metodi ed eventi) delle pagine HTML.
+
+jQuery (sezione javascript della mia relazione di pwm), file:///C:/Users/Jolsty/Desktop/University/Books/headfirstjavascriptprogramming_ebook.pdf pagina 664
+AJAX altro esempio di evento (sezione ajax della mia relazione di pwm)
+
+\begin{figure}
+	\center{\includegraphics[width=0.55\linewidth]{./img/dom.png}}
+	\caption{Esempio di gerarchia del DOM in un documento HTML. Immagine sotto licenza CC BY-SA 3.0. Autore: Birger Eriksson. Link: \url{https://commons.wikimedia.org/wiki/File:DOM-model.svg}}
+	\label{fig:dom}
+\end{figure}
+
 
 %
 % 
@@ -1291,9 +1332,12 @@ S. Hymel, SPI vs I2C Protocol Differences and Things to Consider, ultimo aggiorn
 \url{https://articles.saleae.com/logic-analyzers/spi-vs-i2c-protocol-differences-and-things-to-consider}
 %
 \bibitem{javascript}
-Mozilla, Javascript, ultimo aggiornamento Maggio 2019.
+Mozilla, JavaScript, ultimo aggiornamento Maggio 2019.
 \url{https://developer.mozilla.org/en-US/docs/Web/JavaScript}
-
+%
+\bibitem{eloquent_javascript}
+M. Haverbeke, ELOQUENT JAVASCRIPT: A modern Introduction to Programming, terza edizione.
+\url{https://eloquentjavascript.net/}
 \end{thebibliography}
 %
 \end{document}
