qualche polishing + parte della sezione javascript

--- a/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei_Ciulpan_872394.tex
+++ b/Tesi_Sistema_Accessi_IoT_Andrei_Ciulpan_872394/Tesi_Andrei_Ciulpan_872394.tex
@@ -1261,7 +1261,7 @@ function myFunction() {
 \end{lstlisting}
 JavaScript interagisce col browser attraverso il DOM (\textbf{D}ocument \textbf{O}bject \textbf{M}odel) della pagina HTML. Il DOM è stato standardizzato dalla W3C e viene creato dal browser dopo che una pagina è stata caricata. Esso segue un modello gerarchico di oggetti (Figura \ref{fig:dom}) che possono essere manipolati dagli script dando la possibilità di aggiornare dinamicamente il contenuto, la struttura e lo stile dei documenti. Grazie al DOM è possibile accedere agli elementi (e loro proprietà, metodi ed eventi) delle pagine HTML.
 
-jQuery (sezione javascript della mia relazione di pwm), file:///C:/Users/Jolsty/Desktop/University/Books/headfirstjavascriptprogramming_ebook.pdf pagina 664
+jQuery (sezione javascript della mia relazione di pwm), libro headfirstjavascript pagina 664 \\
 AJAX altro esempio di evento (sezione ajax della mia relazione di pwm)
 
 \begin{figure}
